--- a/assets/style.css
+++ b/assets/style.css
@@ -14,7 +14,7 @@ color: azure; }
 
 .card {flex 1 0 0;
 padding: 15px;
-border-style: solid;
+border-style: solid;-
 text-align: center; 
 border-width: 3px;}
 
