--- a/assets/style.css
+++ b/assets/style.css
@@ -1,25 +1,34 @@
-* {box-sizing: border-box;}
+body {
+    display: flex;
+    flex-direction: column;
+    line-height: 1.4;
 
-body {font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-margin: 0;}
 
-main {display: flex;
-flex-wrap: wrap;
-margin-top: 5%;}
+}
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2%;
+    background-color: lightgray;
+    color: darkolivegreen;
+}
 
-.main-header {display: flex;  flex-wrap: wrap;  justify-content: space-between; 
-padding: 40px; 
-background: lightgray;
-color: azure; }
+h1 {font-size: 175%;}
 
-.card {flex 1 0 0;
-padding: 15px;
-border-style: solid;-
-text-align: center; 
-border-width: 3px;}
+h2 { margin: 3%;
+    font-size: 200%;
+}
+nav ul { display: flex;
+justify-content: space-between;
+min-width: 275px;}
 
-.card header {
-    background: light olive;
-    padding: 15px;
-    color: beige;
+nav a {
+    color: darkolivegreen;
+    font-weight: bold;
+    text-shadow: none ;
+
+}
+aside {
+    width: 30%;
 }
