--- a/assets/style.css
+++ b/assets/style.css
@@ -3,7 +3,6 @@ html {
   line-height: 1.5rem;
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
-  height: 100%;
 }
 
 body {
@@ -11,6 +10,10 @@ body {
   padding: 0;
   min-height: 100%;
   min-width: 100%;
+  background-image: url("./img/IMG_4640.jpeg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 *,
@@ -53,13 +56,6 @@ nav a {
   text-shadow: none;
 }
 
-body {
-  background-image: url("./img/IMG_4640.jpeg");
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
 #about {
   padding: 30px;
 }
@@ -79,10 +75,14 @@ body {
 .about-info {
   width: 80%;
   max-width: 800px;
-  background-color: rgb(255, 255, 255, .5);
+  background-color: rgb(255, 255, 255, 0.5);
   padding: 20px;
   text-align: center;
   border-radius: 10px;
+}
+
+#works {
+  padding: 30px;
 }
 
 .works-info {
@@ -92,17 +92,6 @@ body {
   text-align: center;
   border-radius: 10px;
 }
-
-.contact-info{
-  width: 80%;
-  max-width: 800px;
-  padding: 20px;
-  text-align: center;
-  border-radius: 10px;
-
-
-}
-
 
 .horiseon-image {
   width: 80%;
@@ -122,6 +111,11 @@ body {
   justify-content: center;
   gap: 30px;
 }
+
+#contact {
+  padding: 30px;
+}
+
 .contact-container {
   display: flex;
   flex-wrap: wrap;
@@ -129,3 +123,32 @@ body {
   gap: 30px;
 }
 
+.contact-des {
+  display: flex;
+  flex-direction: column;
+  max-width: 200px;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+.contact-des textarea {
+  height: 100px;
+}
+
+.footer {
+  text-align: center;
+  background-color: lightgrey;
+  margin-bottom: 0;
+  padding: 10px 0 25px 0;
+}
+
+.footer div ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer div ul li a {
+  text-decoration: none;
+  color: darkolivegreen;
+}
