--- a/assets/style.css
+++ b/assets/style.css
@@ -3,6 +3,7 @@ html {
   line-height: 1.5rem;
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
+  // Added height to 100% of page
 }
 
 body {
